--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
+			z-index: 4;
         }
 
         nav {
-            background-color: #ffffff;
             overflow: hidden;
+			position: fixed;
+			z-index: 4;
+
+			font-size: 1.5vw;
         }
 
         nav a {
@@ -46,20 +50,83 @@
 			height: 100vh;
 			width: 100vw;
 		}
-    </style>
+
+		#bg1 {
+			background: url('./Resources/test.svg');
+			background-size: 100%;
+			background-repeat: repeat-y;
+			width: 100vw;
+			height: 100vh;
+			animation: bgScrollUp 300s linear infinite;
+			filter: blur(.7px);
+			flex: 1;
+			opacity: 30%;
+			background-color: gre;
+		}
+
+		#bg2 {
+			background: url('./Resources/test.svg');
+			background-size: 100%;
+			background-repeat: repeat-y;
+			width: 100vw;
+			height: 100vh;
+			animation: bgScrollDown 250s linear infinite;
+			filter: blur(0.7px);
+			flex: 1;
+			opacity: 30%;
+		}
+
+		.ph {
+			flex: 1;
+		}
+
+		.background-cards {
+			display: flex;
+			flex-direction: row;
+		}
+
+		@keyframes bgScrollDown {
+			from {
+				background-position: 0 0;
+			}
+			to {
+				background-position: 0 154px;
+			}
+		}
+
+		@keyframes bgScrollUp {
+			from {
+				background-position: 0 0;
+			}
+			to {
+				background-position: 0 1000vh;
+			}
+		}
+
+		@media only screen and (max-width: 1026px) {
+			#bg2 {
+				display: none;
+			}
+		}
+	</style>
 </head>
 <body>
 	<div class="container">
 		<nav>
-			<a href="#home">Home</a>
-			<a href="#about">About</a>
-			<a href="#services">Services</a>
-			<a href="#contact">Contact</a>
+			<a href="index.html">Home</a>
+			<a href="about.html">About</a>
+			<a href="team.html">Team</a>
+			<a href="contact.html">Contact</a>
 		</nav>
 		<div class="title">
 			<h1>LOOMING ENGINE</h1>
 			<h2>|weaving interactive stories|</h2>
 		</div>
+
+		<div class="background-cards">
+			<div id="bg1"></div>
+		</div>
+
 	</div>
 
 </body>
